# ec-logging

./: .gitignore  CMakeLists.txt  conanfile.py  conanfile.txt
include/: log4cpplogger.h  logger.h  loggerfactory.h  loggerimpl.h
src/: logger.cpp
